--- a/production/admin.html
+++ b/production/admin.html
@@ -35,12 +35,12 @@
 
 <script type="text/ng-template" id="src/admin/overview/template.html">
 <div class="overview-view" ng-controller="App.Overview.Controller">
-	<div data-ac-chart="'bar'" data-ac-data="loginCountData" data-ac-config="loginCountConfig" class="chart col-sm-4"></div>
-	<div data-ac-chart="'bar'" data-ac-data="spaceRankData" data-ac-config="spaceRankConfig" class="chart col-sm-4"></div>
-	<div data-ac-chart="'line'" data-ac-data="loginTrendData" data-ac-config="loginTrendConfig" class="chart col-sm-4"></div>
-	<div data-ac-chart="'line'" data-ac-data="spaceTrendData" data-ac-config="spaceTrendConfig" class="chart col-sm-4"></div>
-	<div data-ac-chart="'bar'" data-ac-data="spaceRankData" data-ac-config="spaceRankConfig" class="chart col-sm-4"></div>
-	<div data-ac-chart="'pie'" data-ac-data="data" data-ac-config="config" class="chart col-sm-4"></div>
+	<highchart config="loginCountConfig" class="chart col-sm-4"></highchart>
+	<highchart config="loginRankConfig" class="chart col-sm-4"></highchart>
+	<highchart config="loginTrendConfig" class="chart col-sm-4"></highchart>
+	<highchart config="spaceTrendConfig" class="chart col-sm-4"></highchart>
+	<highchart config="spaceRankConfig" class="chart col-sm-4"></highchart>
+	<highchart config="UserSpaceConfig" class="chart col-sm-4"></highchart>
 </div>
 </script>
 
@@ -1228,6 +1228,6 @@
     <div class="sidebar" ng-include="'src/admin/sidebar/template.html'"></div>
     <div class="right-main" ui-view=""></div>
   </div>
-  <script src="js/admin.4f39b14c.js"></script>
+  <script src="js/admin.51c0b129.js"></script>
 </body>
 </html>
