--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
   <script type="text/javascript" src="src/app/files/module.js"></script>
   <script type="text/javascript" src="src/app/files/controller.js"></script>
   <script type="text/javascript" src="src/app/files/move-file/controller.js"></script>
+  <script type="text/javascript" src="src/app/files/preview-file/controller.js"></script>
   <script type="text/javascript" src="src/app/files/team-controller.js"></script>
   <script type="text/javascript" src="src/app/files/user-discuss-controller.js"></script>
 
