ui and src font

--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
   <script type="text/javascript" src="src/app/files/controller.js"></script>
   <script type="text/javascript" src="src/app/files/move-file/controller.js"></script>
   <script type="text/javascript" src="src/app/files/preview-file/controller.js"></script>
+  <script type="text/javascript" src="src/app/files/invite-team-users/controller.js"></script>
+  <script type="text/javascript" src="src/app/files/link-share/controller.js"></script>
   <script type="text/javascript" src="src/app/files/team-controller.js"></script>
   <script type="text/javascript" src="src/app/files/user-discuss-controller.js"></script>
 
