trash and userInfo

--- a/admin.html
+++ b/admin.html
@@ -41,6 +41,7 @@
   <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script type="text/javascript" src="src/admin/widgets/widgets.js"></script>
   <script type="text/javascript" src="src/admin/widgets/notification/factory.js"></script>
+  <script type="text/javascript" src="src/admin/widgets/utils/factory.js"></script>
   <script type="text/javascript" src="src/admin/resources/resources.js"></script>
   <script type="text/javascript" src="src/admin/resources/users.js"></script>
   <script type="text/javascript" src="src/admin/resources/group.js"></script>
