--- a/index.html
+++ b/index.html
@@ -93,9 +93,11 @@
   <script type="text/javascript" src="src/app/resources/userDiscuss.js"></script>
   <script type="text/javascript" src="src/app/resources/cloud.js"></script>
   <script type="text/javascript" src="src/app/resources/shareAction.js"></script>
+  <script type="text/javascript" src="src/app/resources/trash.js"></script>
   
   <script type="text/javascript" src="src/app/header/module.js"></script>
   <script type="text/javascript" src="src/app/header/controller.js"></script>
+  <script type="text/javascript" src="src/app/header/user-info/controller.js"></script>
 
   <script type="text/javascript" src="src/app/sidebar/module.js"></script>
   <script type="text/javascript" src="src/app/sidebar/controller.js"></script>
