use ng-scrollbar

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" type="text/css" href="bower_components/ng-grid/ng-grid.css">
   <link rel="stylesheet" type="text/css" href="bower_components/angular-treeview/css/angular.treeview.css">
   <link rel="stylesheet" type="text/css" href="bower_components/angular-snap/angular-snap.min.css">
+  <link rel="stylesheet" type="text/css" href="bower_components/ng-scrollbar/dist/ng-scrollbar.css">
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap-select/dist/css/bootstrap-select.css">
   <link rel="stylesheet" type="text/css" href="src/app/app.css">
   <!-- endbuild -->
@@ -64,7 +65,7 @@
   <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
   <script type="text/javascript" src="bower_components/angular-translate/angular-translate.js"></script>
   <script type="text/javascript" src="bower_components/angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
-  <script type="text/javascript" src="bower_components/mb-scrollbar/mb-scrollbar.js"></script>
+  <script type="text/javascript" src="bower_components/ng-scrollbar/dist/ng-scrollbar.js"></script>
   <script type="text/javascript" src="bower_components/angular-resource/angular-resource.js"></script>
   <script type="text/javascript" src="bower_components/angular-cookies/angular-cookies.js"></script>
   <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
