--- a/link.html
+++ b/link.html
@@ -30,18 +30,28 @@
   		</div>
 	  </div>
   </div>
-  <div class="enter-password">
+  <div class="enter-password" ng-controller="App.LinkShare.InputPasswordController" ng-show = "neddPassword">
     <div class="input-password">
       <img src="./images/logo_white_max.png" />
       <div class="form-group">
-        <input class="form-control" placeholder="输入文件提取密码"/>
-        <input type="button"  class="btn btn-warning" value="确定"/>
+        <input class="form-control" placeholder="输入文件提取密码" ng-model = "password"/>
+        <input type="button"  class="btn btn-warning" value="确定" ng-click = "checkPassword(password)"/>
       </div>
     </div>
   </div>
+  
+  <div class="upload-progress-dialog" style="display: block;" ng-include="'src/linkShare/upload-progress-dialog/template.html'"></div>
+
+  <script id="template/modal/window.html" type="text/ng-template">
+    <div tabindex="-1" role="dialog" class="modal fade" ng-class="{in: animate}" ng-style="{'z-index': 1050 + index*10, display: 'block'}" ng-click="close($event)">
+        <div class="modal-dialog" ng-class="{'modal-sm': size == 'sm', 'modal-lg': size == 'lg'}"><div class="modal-content" modal-transclude>
+        </div>
+      </div>
+    </div>
+  </script>
 
   <!-- build:js js/app.js -->
-  
+  <script type="text/javascript" src="bower_components/ng-file-upload/angular-file-upload-shim.js"></script>
   <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
 
   <script type="text/javascript" src="bower_components/angular/angular.js"></script>
@@ -51,9 +61,9 @@
   <script type="text/javascript" src="bower_components/angular-animate/angular-animate.js"></script>
   <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script type="text/javascript" src="src/linkShare/ui-bootstrap-fix.js"></script>
+  <script type="text/javascript" src="bower_components/ng-file-upload/angular-file-upload.js"></script>
 
-
-  <script type="text/javascript" src="bower_components/mb-scrollbar/mb-scrollbar.js"></script>
+  <script type="text/javascript" src="bower_components/angular-md5/angular-md5.js"></script>
   <script type="text/javascript" src="bower_components/angular-resource/angular-resource.js"></script>
   <script type="text/javascript" src="bower_components/angular-cookies/angular-cookies.js"></script>
   <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
@@ -66,13 +76,18 @@
   <script type="text/javascript" src="src/linkShare/resources/resources.js"></script>
   <script type="text/javascript" src="src/linkShare/resources/users.js"></script>
   <script type="text/javascript" src="src/linkShare/resources/share.js"></script>
+  <script type="text/javascript" src="src/linkShare/resources/folders.js"></script>
 
   
   <script type="text/javascript" src="src/linkShare/main/module.js"></script>
   <script type="text/javascript" src="src/linkShare/main/controller.js"></script>
+  <script type="text/javascript" src="src/linkShare/main/input-password-controller.js"></script>
   
   <script type="text/javascript" src="src/linkShare/header/module.js"></script>
   <script type="text/javascript" src="src/linkShare/header/controller.js"></script>
+  
+  <script type="text/javascript" src="src/linkShare/upload-progress-dialog/module.js"></script>
+  <script type="text/javascript" src="src/linkShare/upload-progress-dialog/controller.js"></script>
   
   <script type="text/javascript" src="src/linkShare/sidebar/module.js"></script>
   <script type="text/javascript" src="src/linkShare/sidebar/controller.js"></script>
