--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <link rel="stylesheet" type="text/css" href="bower_components/select2/select2.css">
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="bower_components/ng-grid/ng-grid.css">
+  <link rel="stylesheet" type="text/css" href="bower_components/perfect-scrollbar/src/perfect-scrollbar.css">
   <link rel="stylesheet" type="text/css" href="bower_components/angular-treeview/css/angular.treeview.css">
   <link rel="stylesheet" type="text/css" href="bower_components/angular-snap/angular-snap.min.css">
-  <link rel="stylesheet" type="text/css" href="bower_components/ng-scrollbar/dist/ng-scrollbar.css">
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap-select/dist/css/bootstrap-select.css">
   <link rel="stylesheet" type="text/css" href="src/app/app.css">
   <!-- endbuild -->
@@ -53,6 +53,8 @@
   <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
   <script type="text/javascript" src="bower_components/select2/select2.js"></script>
   <script type="text/javascript" src="bower_components/angular/angular.js"></script>
+  <script type="text/javascript" src="bower_components/perfect-scrollbar/src/jquery.mousewheel.js"></script>
+  <script type="text/javascript" src="bower_components/perfect-scrollbar/src/perfect-scrollbar.js"></script>
   <script type="text/javascript" src="bower_components/angular-ui-select2/src/select2.js"></script>
   <script type="text/javascript" src="bower_components/angular-animate/angular-animate.js"></script>
   <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
@@ -60,12 +62,12 @@
   <script type="text/javascript" src="bower_components/ng-grid/build/ng-grid.js"></script>
 
   <script type="text/javascript" src="bower_components/ng-file-upload/angular-file-upload.js"></script>
+  <script type="text/javascript" src="bower_components/angular-perfect-scrollbar/src/angular-perfect-scrollbar.js"></script>
   
   <script type="text/javascript" src="bower_components/es5-shim/es5-shim.js"></script>
   <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
   <script type="text/javascript" src="bower_components/angular-translate/angular-translate.js"></script>
   <script type="text/javascript" src="bower_components/angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
-  <script type="text/javascript" src="bower_components/ng-scrollbar/dist/ng-scrollbar.js"></script>
   <script type="text/javascript" src="bower_components/angular-resource/angular-resource.js"></script>
   <script type="text/javascript" src="bower_components/angular-cookies/angular-cookies.js"></script>
   <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
