--- a/production/login.html
+++ b/production/login.html
@@ -4,13 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>全携通</title>
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
-    <!-- build:css css/login/login.css -->
-    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
-    <!-- endbuild -->
-    <!-- build:js js/login/login.js -->
-    <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <!-- endbuild -->
+    <link rel="stylesheet" href="css/login/login.9c307a9d.css">
+    <script src="js/login/login.24f29126.js"></script>
     <style>
       a {
         cursor: pointer;
