build js location

--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <!-- build:css css/login/login.css -->
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <!-- endbuild -->
-    <!-- build:js js/login/login.js -->
+    <!-- build:js js/login.js -->
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <!-- endbuild -->
