--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
   <script type="text/javascript" src="src/app/resources/cloud.js"></script>
   <script type="text/javascript" src="src/app/resources/shareAction.js"></script>
   <script type="text/javascript" src="src/app/resources/trash.js"></script>
+  <script type="text/javascript" src="src/app/resources/contact.js"></script>
   
   <script type="text/javascript" src="src/app/header/module.js"></script>
   <script type="text/javascript" src="src/app/header/controller.js"></script>
