--- a/link.html
+++ b/link.html
@@ -9,7 +9,7 @@
   <title>Admin Console of Act</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- build:css css/app/app.css -->
+  <!-- build:css css/linkShare/linkShare.css -->
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="src/linkShare/app.css">
   <!-- endbuild -->
@@ -50,7 +50,7 @@
     </div>
   </script>
 
-  <!-- build:js js/app.js -->
+  <!-- build:js js/linkShare.js -->
   <script type="text/javascript" src="bower_components/ng-file-upload/angular-file-upload-shim.js"></script>
   <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
 
