--- a/src/admin/overview/template.html
+++ b/src/admin/overview/template.html
@@ -2,7 +2,7 @@
 	<highchart config="loginCountConfig" class="chart col-sm-4"></highchart>
 	<highchart config="loginRankConfig" class="chart col-sm-4"></highchart>
 	<highchart config="loginTrendConfig" class="chart col-sm-4"></highchart>
-	<highchart config="spaceTrendConfig" class="chart col-sm-4"></highchart>
-	<highchart config="spaceRankConfig" class="chart col-sm-4"></highchart>
-	<highchart config="UserSpaceConfig" class="chart col-sm-4"></highchart>
+	<highchart config="spaceTrendConfig" class="chart col-sm-4 down"></highchart>
+	<highchart config="spaceRankConfig" class="chart col-sm-4 down"></highchart>
+	<highchart config="UserSpaceConfig" class="chart col-sm-4 down"></highchart>
 </div>
