--- a/src/admin/sidebar/template.html
+++ b/src/admin/sidebar/template.html
@@ -12,10 +12,10 @@
         	用户与群组
       </a>
     </li>
-    <li ng-class="{ active: $state.includes('reports') }">
+    <li ng-class="{ active: $state.includes('reports') }" ng-hide = "true">
       <a ui-sref="reports" class="reports">
         <span class="reports-img"></span>
-        	报告
+        	报表
       </a>
     </li>
   </ul>
