Newest enhancement of UI for index page.

--- a/login.html
+++ b/login.html
@@ -219,7 +219,7 @@
             'device_info' : 'browser'
           };
           $.ajax({
-            url : '/api' + '/user/login',
+            url : 'http://101.231.216.75:8888/api' + '/user/login',
             type : 'post',
             dataType : 'json',
             data : data
@@ -279,7 +279,7 @@
               'device_info' : 'browser'
             };
             $.ajax({
-              url : '/api' + '/user/login',
+              url : 'http://101.231.216.75:8888/api' + '/user/login',
               type : 'post',
               dataType : 'json',
               data : data
