right control in admin

--- a/admin.html
+++ b/admin.html
@@ -22,6 +22,7 @@
     <div class="sidebar" ng-include="'src/admin/sidebar/template.html'"></div>
     <div class="right-main" ui-view></div>
   </div>
+  <div class="no-right-view" ng-show="noRight" ng-include="'src/admin/501/template.html'"></div>
   <!-- build:js js/admin.js -->
   <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
   <script type="text/javascript" src="bower_components/angular/angular.js"></script>
