--- a/src/admin/users/groups/add-user-modal.html
+++ b/src/admin/users/groups/add-user-modal.html
@@ -105,7 +105,7 @@
 					<button type="submit" class="btn btn-default">
 						确定
 					</button>
-					<button type="cancle" class="btn btn-default col-sm-offset-1">
+					<button type="cancel" class="btn btn-default col-sm-offset-1">
 						取消
 					</button>
 				</div>
