Some enhancement of UI for both index and admin page.

--- a/src/admin/header/template.html
+++ b/src/admin/header/template.html
@@ -1,5 +1,6 @@
 <div class="header-view" ng-controller="App.Header.Controller">
 	<div class="header-ext">
+		<div class="indicator pull-left">管理控制台</div>
 		<div class="back-main pull-right" ng-click = "backToindex()">
 			<div class="back-img"></div>
 			返回我的主页面
@@ -7,7 +8,7 @@
 	</div>
 	<div class="header-search" role="navigation">
 		<div class="logo pull-left"></div>
-		<div class="search pull-left">
+		<div class="search">
 			<input type="text" class="search-text form-control" placeholder="搜索内部用户" ng-model = "seachInputValue" ng-keydown = "searchByKeyDown($event,seachInputValue)"/>
 			<button class="search-button btn btn-default" ng-click = "searchByButton(seachInputValue)">搜索</button>
 		</div>
