remove useless image

--- a/link.html
+++ b/link.html
@@ -50,7 +50,7 @@
     </div>
   </script>
 
-  <!-- build:js js/linkShare.js -->
+  <!-- build:js js/link-share.js -->
   <script type="text/javascript" src="bower_components/ng-file-upload/angular-file-upload-shim.js"></script>
   <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
 
