put config to global

--- a/admin.html
+++ b/admin.html
@@ -79,7 +79,8 @@
   <script type="text/javascript" src="src/admin/reports/controller.js"></script>
   <script type="text/javascript" src="src/admin/settings/module.js"></script>
   <script type="text/javascript" src="src/admin/settings/controller.js"></script>
-  <script type="text/javascript" src="src/admin/config.js"></script>
+  
+  <script type="text/javascript" src="src/global/config.js"></script>
   <script type="text/javascript" src="src/admin/admin.js"></script>
   <!-- endbuild -->
 </body>
