--- a/link.html
+++ b/link.html
@@ -92,7 +92,7 @@
   <script type="text/javascript" src="src/link-share/sidebar/module.js"></script>
   <script type="text/javascript" src="src/link-share/sidebar/controller.js"></script>
 
-  <script type="text/javascript" src="src/link-share/config.js"></script>
+  <script type="text/javascript" src="src/global/config.js"></script>
   <script type="text/javascript" src="src/link-share/app.js"></script>
   <!-- endbuild -->
 </body>
