--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   <script type="text/javascript" src="src/app/upload-progress-dialog/module.js"></script>
   <script type="text/javascript" src="src/app/upload-progress-dialog/controller.js"></script>
   
-  <script type="text/javascript" src="src/app/config.js"></script>
+  <script type="text/javascript" src="src/global/config.js"></script>
   <script type="text/javascript" src="src/app/app.js"></script>
   <!-- endbuild -->
 </body>
